
2016-06-20 Ron Norman <rjn@inglenet.com>

	* common.h: added some COB_CHAR_xxx to define some characters
	* fileio.c: for LINE SEQUENTIAL files with COB_LS_VALIDATE = true
	    changed bad data error from 30 to 34
	    Also allow some characters thru such as BS, FF, TAB, ESC, SI
	    No data validation is done for LINE ADVANCING output files

2016-05-01 Ron Norman <rjn@inglenet.com>

	* common.c: fixed incorrect reporting of error for undefined environment variables
	  run_misc.at: removed check for 'NEW' as this is now a reserved word
	  configuration.at: updated to match compiler
	  syn_definition.at: updated to expect SYNC RIGHT to pass
	* intrinsic.c (cob_intr_current_date): fixed size error

2016-04-22  Ron Norman

	* common.h, reportio.c: updates to support features of an IBM REPORT WRITER
	  PRESENT AFTER & ABSENT AFTER

2016-04-16 Ron Norman <rjn@inglenet.com>

	* common.c: report error for undefined environment variables

2016-03-23  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c (numval): added missing NUMVAL-C-specific code I missed in
	  r793, causing bug #218.

2016-03-15  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.h [_MSC_VER]: added missing defines / include for implementations
	  of COBPRINTER and COB_CURRENT_DATE

2016-03-15 Ron Norman <rjn@inglenet.com>

	* runtime.cfg Comments updated
	  common.c display COB_PRE_LOAD as set and as evaluated
	  call.c clears COB_PRE_LOAD value before evaluating

2016-03-13  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* intrinsic.c (locale_time): consolidation still used sizeof(buff) after
	  buff changed from char [] to char *, fixed by introducing LOCTIME_BUFSIZE
	* intrinsic.c (cob_intr_lcl_time_from_secs) re-added missing exception

2016-03-12  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: consolidated copy-and-pasted code in numerous functions,
	  including: SUBSTITUTE(-CASE), NUMVAL(-C), VARIANCE and
	  LOCALE-TIME(-FROM-SECONDS).